@@ -43,10 +43,6 @@
 // Save window state
 #define WND_STATE
 
-// This make dbg wnd's as children of the main window.
-// Thus, the taskbar is not filled-up with a lot of windows.
-//#define	WND_TRANSIENT
-
 /* Definitions */
 
 typedef struct {
